# mixctl

./: .gitignore  Cargo.toml  LICENSE  README.md  device-test.sh  docker-compose.yml  probe.sh
.github/workflows/: ci.yml  release.yml
applet/: Cargo.toml
applet/src/: dbus.rs  main.rs  output_strips.rs  route_strips.rs
apps/applet/: Cargo.toml  README.md  build.rs
apps/applet/src/: dbus.rs  main.rs  tray.rs
apps/applet/ui/: popup.slint
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs
apps/tauri/: index.html  package-lock.json  package.json
apps/tauri/src/: App.tsx  main.tsx
apps/tauri/src-tauri/: Cargo.toml  mixctl.desktop  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: error.rs  lib.rs  main.rs  signals.rs  state.rs  tray.rs
apps/tauri/src-tauri/src/commands/: channels.rs  custom_inputs.rs  dsp.rs  mixer.rs  mod.rs  system.rs
apps/tauri/src/components/layout/: Header.tsx
apps/tauri/src/components/mixer/: AddChannelMenu.tsx  ChannelPopover.tsx  CustomInputsSection.tsx  ExpandedFooter.tsx  FooterBar.tsx  InputLabel.tsx  MatrixGrid.tsx  MuteButton.tsx  OutputHeader.tsx  RouteCell.tsx  VolumeFader.tsx
apps/tauri/src/components/shared/: EqCurve.tsx
apps/tauri/src/lib/: api.ts  types.ts
apps/tauri/src/lib/stores/: mixer-store.ts
apps/tauri/src/pages/: AppletPage.tsx  BeacnPage.tsx  CapturePage.tsx  ChannelEditorPage.tsx  ChannelsPage.tsx  DspPage.tsx  MainPage.tsx  RulesPage.tsx
apps/tauri/src/styles/: index.css
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  dbus.rs  input.rs  main.rs
apps/tui/src/ui/: beacn.rs  capture.rs  dsp.rs  footer.rs  header.rs  matrix.rs  mod.rs  profiles.rs  routes.rs  rules.rs  settings.rs  status.rs  streams.rs  tabs.rs
apps/ui/: Cargo.toml  README.md
apps/ui/src/: capture.rs  dbus.rs  eq_curve.rs  main.rs  settings.rs  sidebar.rs  streams.rs  strips.rs
apps/ui/ui/: beacn_dialog.slint  capture_dialog.slint  channels_dialog.slint  dsp_dialog.slint  main.slint  route_strip.slint  rules_dialog.slint  sidebar.slint  stream_card.slint  stream_column.slint
cli/: Cargo.toml  README.md
cli/src/: main.rs
crates/adapter-sdk/: Cargo.toml
crates/adapter-sdk/src/: adapter.rs  channel.rs  lib.rs  runner.rs  types.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: api.rs  config_sections.rs  dbus.rs  lib.rs
crates/device/: Cargo.toml  README.md
crates/device/src/: lib.rs  thread.rs  types.rs  usb.rs
crates/display/: Cargo.toml  README.md
crates/display/src/: layout.rs  lib.rs  render.rs  types.rs
crates/display/src/column4/: mod.rs
crates/display/src/dial4/: mod.rs
crates/display/src/grid2x2/: mod.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: command.rs  consts.rs  enums.rs  image.rs  init.rs  input.rs  lib.rs
daemon/: Cargo.toml  README.md
daemon/src/: config.rs  custom_inputs.rs  dbus_adapter.rs  main.rs  service.rs  shutdown.rs  state.rs
daemon/src/audio/: commands.rs  dsp.rs  engine.rs  events.rs  mixer.rs  mod.rs  volume.rs
debian/: changelog  control  rules
devices/beacn-daemon/: Cargo.toml  README.md
devices/beacn-daemon/src/: main.rs  state.rs
docker/: Dockerfile.dev  dbus-entrypoint.sh  pipewire-entrypoint.sh
docs/: capture-devices.md  configuration.md  eq-and-processing.md  getting-started.md  streaming-setup.md  troubleshooting.md  writing-an-adapter.md
probe/: Cargo.toml  README.md  tr_logo.rgb565  tr_logo.rgb565le
probe/src/: main.rs  usb.rs
template/adapter/: Cargo.toml  README.md  cargo-generate.toml
template/adapter/src/: main.rs
tools/beacn-probe/: Cargo.toml  README.md  tr_logo.bgr888  tr_logo.rgb888  tr_logo.rgba
tools/beacn-probe/src/: main.rs
tools/beacn-test/: Cargo.toml  README.md
tools/beacn-test/src/: main.rs
tools/fake-device/: Cargo.toml
tools/fake-device/src/: main.rs
ui/: Cargo.toml
ui/src/: capture.rs  dbus.rs  main.rs  rules.rs  sidebar.rs  strips.rs
