[package]
name = "mixctl-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-core = { path = "../crates/core" }
zbus = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
