[package]
name = "mixctl-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-core = { path = "../crates/core" }
zbus = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
toml = "0.8"
dirs = "6"
pipewire = "0.9"
glob-match = "0.2"
