[package]
name = "mixctl-probe"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-protocol = { path = "../crates/protocol" }
rusb = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
