[package]
name = "mixctl-applet"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-core = { path = "../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ksni = "0.3"
zbus = "5"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
gtk4 = "0.11"
libadwaita = "0.9"
futures-lite = "2"
