[package]
name = "mixctl-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-core = { path = "../../crates/core" }
zbus = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures-lite = "2"
dirs = "6"
