[package]
name = "mixctl-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mixctl-tui"
path = "src/main.rs"

[dependencies]
mixctl-core = { path = "../../crates/core" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
zbus = "5"
futures-lite = "2"
anyhow = "1"
serde_json = "1"
