[package]
name = "mixctl-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-core = { path = "../../crates/core" }
slint = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
zbus = "5"
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1"
