[package]
name = "mixctl-beacn-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
mixctl-core = { path = "../../crates/core" }
mixctl-adapter-sdk = { path = "../../crates/adapter-sdk" }
mixctl-beacn-device = { path = "../../crates/device" }
mixctl-beacn-display = { path = "../../crates/display" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-lite = "2"
