[package]
name = "mixctl-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "mixctl_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mixctl-core = { path = "../../../crates/core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
zbus = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures-lite = "2"
ksni = "0.3"
log = "0.4"
